--- a/package.json
+++ b/package.json
@@ -45,10 +45,12 @@
     "less-loader": "^2.2.3",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
+    "node-sass": "^4.2.0",
     "phantomjs-prebuilt": "^2.1.12",
     "postcss-loader": "^1.2.1",
     "raw-loader": "^0.5.1",
     "replace-bundle-webpack-plugin": "^1.0.0",
+    "sass-loader": "^4.1.1",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
