--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "Ready-to-go Preact starter project powered by webpack.",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --progress",
-    "start": "serve build -s -c 1",
+    "start": "serve build -s -c 1 && node ./tools/start.cli.js",
     "prestart": "npm run build",
-    "build": "cross-env NODE_ENV=production webpack -p --progress",
+    "build": "cross-env NODE_ENV=production webpack -p --progress && node ./tools/build.cli.js",
     "prebuild": "mkdirp build",
-    "test": "npm run -s lint && npm run -s test:karma",
+    "test": "npm run -s lint && npm run -s test:karma && && node ./tools/test.cli.js",
     "test:karma": "karma start test/karma.conf.js --single-run",
-    "lint": "eslint {src,test}"
+    "lint": "eslint ./src/ || true && node ./tools/lint.cli.js"
   },
   "keywords": [
     "preact",
@@ -31,6 +31,8 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.14.0",
     "babel-runtime": "^6.11.6",
+    "chai": "^3.5.0",
+    "colors": "^1.1.2",
     "copy-webpack-plugin": "^4.0.1",
     "core-js": "^2.4.1",
     "cross-env": "^3.1.3",
@@ -41,9 +43,19 @@
     "html-webpack-plugin": "^2.22.0",
     "isparta-loader": "^2.0.0",
     "json-loader": "^0.5.4",
+    "karma": "^1.0.0",
+    "karma-chai": "^0.1.0",
+    "karma-chai-sinon": "^0.1.5",
+    "karma-coverage": "^1.1.1",
+    "karma-mocha": "^1.0.1",
+    "karma-mocha-reporter": "^2.1.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.8.0",
     "less": "^2.7.1",
     "less-loader": "^2.2.3",
     "mkdirp": "^0.5.1",
+    "mocha": "^3.2.0",
     "ncp": "^2.0.0",
     "node-sass": "^4.2.0",
     "phantomjs-prebuilt": "^2.1.12",
@@ -51,6 +63,8 @@
     "raw-loader": "^0.5.1",
     "replace-bundle-webpack-plugin": "^1.0.0",
     "sass-loader": "^4.1.1",
+    "sinon": "^1.17.7",
+    "sinon-chai": "^2.8.0",
     "source-map-loader": "^0.1.5",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.7",
