preact habitat updated

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
   "dependencies": {
     "preact": "^7.1.0",
     "preact-compat": "^3.0.0",
+    "preact-habitat": "^0.6.1",
     "promise-polyfill": "^6.0.2",
     "proptypes": "^0.14.3",
     "serve": "^2.0.0"
