--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,16 @@
-/node_modules
+# stupid files
+*.swp
+*~
+*.log
+/*.js.map
+.DS_Store
+
+
+node_modules/
 
 # ignore build
-/build
+build/
 
 # ignore test coverage
-/coverage.data
-/coverage/
+coverage.data
+coverage/
