--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Ready-to-go Preact starter project powered by webpack.",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --hot --progress",
-    "start": "serve build -s -c 1 && node ./tools/start.cli.js",
+    "start": "serve . -s -c 1 && node ./tools/start.cli.js",
     "prestart": "npm run build",
     "build": "cross-env NODE_ENV=production webpack -p --progress && node ./tools/build.cli.js",
     "prebuild": "mkdirp build",
@@ -20,64 +20,63 @@
   "license": "MIT",
   "author": "Jason Miller <jason@developit.ca>",
   "devDependencies": {
-    "autoprefixer": "^6.4.0",
-    "babel": "^6.5.2",
-    "babel-core": "^6.14.0",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.2.5",
+    "autoprefixer": "^7.1.2",
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^7.2.3",
+    "babel-loader": "^7.1.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-react-jsx": "^6.8.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.14.0",
-    "babel-runtime": "^6.11.6",
-    "chai": "^3.5.0",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "babel-runtime": "^6.26.0",
+    "chai": "^4.1.1",
     "colors": "^1.1.2",
     "copy-webpack-plugin": "^4.0.1",
-    "core-js": "^2.4.1",
-    "cross-env": "^3.1.4",
-    "css-loader": "^0.26.1",
-    "eslint": "^3.0.1",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "html-webpack-plugin": "^2.22.0",
+    "core-js": "^2.5.0",
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.5",
+    "eslint": "^4.4.1",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.30.1",
     "isparta-loader": "^2.0.0",
-    "json-loader": "^0.5.4",
-    "karma": "^1.0.0",
+    "json-loader": "^0.5.7",
+    "karma": "^1.7.0",
     "karma-chai": "^0.1.0",
     "karma-chai-sinon": "^0.1.5",
     "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.0.1",
-    "karma-mocha-reporter": "^2.1.0",
-    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.3",
+    "karma-phantomjs-launcher": "^1.0.4",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.8.0",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
+    "karma-webpack": "^2.0.4",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
     "mkdirp": "^0.5.1",
-    "mocha": "^3.2.0",
+    "mocha": "^3.5.0",
     "ncp": "^2.0.0",
-    "node-sass": "^4.2.0",
-    "phantomjs-prebuilt": "^2.1.12",
-    "postcss-loader": "^1.2.1",
+    "node-sass": "^4.5.3",
+    "phantomjs-prebuilt": "^2.1.15",
+    "postcss-loader": "^2.0.6",
     "raw-loader": "^0.5.1",
     "replace-bundle-webpack-plugin": "^1.0.0",
-    "sass-loader": "^4.1.1",
-    "sinon": "^1.17.7",
-    "sinon-chai": "^2.8.0",
-    "source-map-loader": "^0.1.6",
-    "style-loader": "^0.13.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.15.0"
+    "sass-loader": "^6.0.6",
+    "serve": "^6.0.6",
+    "sinon": "^3.2.1",
+    "sinon-chai": "^2.13.0",
+    "source-map-loader": "^0.2.1",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
-    "preact": "^7.1.0",
-    "preact-compat": "^3.0.0",
+    "preact": "^8.2.1",
     "preact-habitat": "^3.0.2",
     "promise-polyfill": "^6.0.2",
-    "proptypes": "^0.14.3",
-    "serve": "^2.0.0"
+    "proptypes": "^1.1.0"
   },
   "main": "webpack.config.babel.js",
   "directories": {
