--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "prebuild": "mkdirp build",
     "test": "npm run lint && npm run -s test:karma && node ./tools/test.cli.js",
     "test:karma": "karma start test/karma.conf.js --single-run",
-    "lint": "eslint ./src/ || true && node ./tools/lint.cli.js"
+    "lint": "eslint ./src/ || true && node ./tools/lint.cli.js",
+    "precommit": "lint-staged"
   },
   "keywords": [
     "preact",
@@ -38,9 +39,12 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.5",
     "eslint": "^4.4.1",
+    "eslint-config-prettier": "^2.3.0",
+    "eslint-plugin-react": "^7.2.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^0.11.2",
     "html-webpack-plugin": "^2.30.1",
+    "husky": "^0.14.3",
     "isparta-loader": "^2.0.0",
     "json-loader": "^0.5.7",
     "karma": "^1.7.0",
@@ -54,12 +58,14 @@
     "karma-webpack": "^2.0.4",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
+    "lint-staged": "^4.0.3",
     "mkdirp": "^0.5.1",
     "mocha": "^3.5.0",
     "ncp": "^2.0.0",
     "node-sass": "^4.5.3",
     "phantomjs-prebuilt": "^2.1.15",
     "postcss-loader": "^2.0.6",
+    "prettier": "^1.5.3",
     "raw-loader": "^0.5.1",
     "replace-bundle-webpack-plugin": "^1.0.0",
     "sass-loader": "^6.0.6",
@@ -89,5 +95,12 @@
   "bugs": {
     "url": "https://github.com/zouhir/preact-widgets-boilerplate/issues"
   },
-  "homepage": "https://github.com/zouhir/preact-widgets-boilerplate#readme"
+  "homepage": "https://github.com/zouhir/preact-widgets-boilerplate#readme",
+  "lint-staged": {
+    "{src,test,tools}/**/*.{js,jsx,html,scss}": [
+      "npm run lint",
+      "prettier --write --print-width 80 --single-quote",
+      "git add"
+    ]
+  }
 }
